--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "green-leaf-herbals",
+  "name": "shop-n-cart",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -12,7 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aws-amplify": "^6.0.0",
+    "@supabase/supabase-js": "^2.45.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
